<resources>
    <string name="app_name">Basketball Counter</string>
    <string name="threePointsA">+3 POINTS</string>
    <string name="threePointsB">+3 POINTS</string>
    <string name="twoPointsA">+2 POINTS</string>
    <string name="twoPointsB">+2 POINTS</string>
    <string name="freeThrowA">FREE THROW</string>
    <string name="freeThrowB">FREE THROW</string>
    <string name="reset">RESET</string>
    <string name="save">SAVE</string>
    <string name="display">DISPLAY</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="pointsA">0</string>
    <string name="pointsB">0</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="false_button">false</string>
    <string name="true_button">true</string>
    <string name="question_text">question</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_title">Game title</string>
    <string name="team_a_label">Team A:</string>
    <string name="team_b_label">Team B:</string>
    <string name="team_a_score">Team A Score</string>
    <string name="team_b_score">Team B Score</string>
    <string name="game_date">Game date</string>
    <string name="team_icon">team icon</string>

</resources>