<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/titleConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:padding="24dp"
                    android:text="@string/team_a"
                    android:textColor="#000"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/teamScoreA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/pointsA"
                    android:textColor="#FDb813"
                    android:textSize="60sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/threePointsA"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="10dp"
                    android:background="#62C2CC"
                    android:onClick="addScore"
                    android:text="@string/threePointsA" />

                <Button
                    android:id="@+id/twoPointsA"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="10dp"
                    android:background="#62C2CC"
                    android:onClick="addScore"
                    android:text="@string/twoPointsA" />

                <Button
                    android:id="@+id/freeThrowA"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="10dp"

                    android:background="#62C2CC"
                    android:onClick="addScore"
                    android:text="@string/freeThrowA" />
            </LinearLayout>

            <View
                android:id="@+id/dividerScoreTeams"
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@android:color/holo_blue_light" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:padding="24dp"
                    android:text="@string/team_b"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/teamScoreB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/pointsB"
                    android:textColor="#FDb813"
                    android:textSize="60sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/threePointsB"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginBottom="10dp"
                    android:background="#9FC131"
                    android:onClick="addScore"
                    android:text="@string/threePointsB" />

                <Button
                    android:id="@+id/twoPointsB"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginBottom="10dp"
                    android:background="#9FC131"
                    android:onClick="addScore"
                    android:text="@string/twoPointsB" />

                <Button
                    android:id="@+id/freeThrowB"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginBottom="10dp"
                    android:background="#9FC131"
                    android:onClick="addScore"
                    android:text="@string/freeThrowB" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reset"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/mybutton"
                android:onClick="addScore"
                android:text="@string/reset"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/save"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/mybutton"
                android:onClick="addScore"
                android:text="@string/save"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/display"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/mybutton"
                android:onClick="addScore"
                android:text="@string/display" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
