<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">


            <TextView
                android:id="@+id/game_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/game_title"
                android:textAllCaps="true"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/game_teamA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/team_a_label"
                    android:textColor="#62C2CC"
                    android:textAllCaps="true"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/game_teamB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/team_b_label"
                    android:textColor="#9FC131"
                    android:textAllCaps="true"
                    android:textSize="15sp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="InefficientWeight,RtlHardcoded">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/game_scoreA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/team_a_score"
                    android:textColor="#62C2CC"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="#FDb813" />

                <TextView
                    android:id="@+id/game_scoreB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/team_b_score"
                    android:textColor="#9FC131"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/teamIcon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:paddingLeft="3dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/b_team_icon"
                        tools:ignore="RtlSymmetry"
                        android:contentDescription="@string/team_icon" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/game_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:padding="5dp"
                android:text="@string/game_date"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:background="?android:attr/dividerVertical"/>

</LinearLayout>

